Current implementation of FocusScope::focusScopeOf(Node*) simply returns the given node's treeScope. That is wrong if the given node is a distributed node. In such case, we should return a proper focus scope considering composed shadow tree.
Created attachment 153775 [details] Fix a FocusScope for distributed nodes
Comment on attachment 153775 [details] Fix a FocusScope for distributed nodes Clearing flags on attachment: 153775 Committed r123407: <http://trac.webkit.org/changeset/123407>
All reviewed patches have been landed. Closing bug.