A FocusScope for a distributed node should not be its TreeScope. https://bugs.webkit.org/show_bug.cgi?id=91829

Reviewed by Dimitri Glazkov.

Source/WebCore:

Current implementation of FocusScope::focusScopeOf(Node*) returns
the given node's treeScope().  That does not apply if the node is
a distributed node.  We should calculate a FocusScope for a
distributed node by traversing ancestor nodes in Composed Shadow
Tree.

Test: fast/dom/shadow/focus-navigation-with-distributed-nodes.html

* page/FocusController.cpp:
(WebCore::FocusScope::focusScopeOf):

LayoutTests:

* fast/dom/shadow/focus-navigation-with-distributed-nodes-expected.txt: Added.
* fast/dom/shadow/focus-navigation-with-distributed-nodes.html: Added.
* fast/dom/shadow/resources/shadow-dom.js:
(shouldNavigateFocus):


Canonical link: https://commits.webkit.org/109858@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@123407 268f45cc-cd09-0410-ab3c-d52691b4dbfc